--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://ondamike.github.io/privaf",
+  "homepage": "https://tide-foundation.github.io/privaf",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
